--- a/packages/formItem/package.json
+++ b/packages/formItem/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lg-form-item",
+  "name": "lg-form-item-qt",
   "version": "0.0.2",
   "description": "",
   "main": "dist/cjs/index.js",
@@ -14,5 +14,5 @@
   "dependencies": {
     "async-validator": "^3.5.2"
   },
-  "gitHead": "f32b69e4a29dc0559faeb59ea82ac47b036e303d"
+  "gitHead": "8064cce365ae380636ed90b6e0d6e62f1a7e3215"
 }
