--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lg-input",
+  "name": "lg-input-qt",
   "version": "0.0.2",
   "description": "",
   "main": "dist/cjs/index.js",
@@ -14,5 +14,5 @@
   "dependencies": {
     "lodash": "3"
   },
-  "gitHead": "f32b69e4a29dc0559faeb59ea82ac47b036e303d"
+  "gitHead": "8064cce365ae380636ed90b6e0d6e62f1a7e3215"
 }
